tests/fails/assign_balance.lt
var a, b, c = 1,2,3,4

b, c = 5,6,7